--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "mongodb": "^6.8.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0"
   }
 }
